--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Tritium",
+  "name": "RDUI",
   "version": "2.0.0",
   "description": "Hydrogen custom ui",
   "author": "phantom8015",
