--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "RDUI",
+  "name": "Tritium",
   "version": "2.0.0",
   "description": "Hydrogen custom ui",
-  "author": "phantom8015",
+  "author": "phantom8015 (edited by rdnevermisses)",
   "dependencies": {
     "chokidar": "^4.0.3",
     "prompt-sync": "^4.2.0"
